fix: alignment

--- a/client/src/pages/catalog.css
+++ b/client/src/pages/catalog.css
@@ -18,5 +18,5 @@
 .catalog-item-bottom {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
 }
